mainAndThePeople/css/main.css
/* ... */
/* ///////////////////////////////////////////// */

/* Website contents */
.websiteContents {
    padding: 2%;
    position: inherit;
}

/* ///////////////////////////////////////////// */
/* Main page picture slideshow */

* {
    box-sizing: border-box
}

/* Slideshow container */
.slideshow-container {
    max-width: 100%;
    width: 100%;
    position: relative;
    margin: inherit;
}

.mySlides img {
    max-width: 100%;
    max-height: 400px;
    width: 100%;
    height: auto;
    object-fit: cover;
}

/* Hide the images by default */
.mySlides {
    display: none;
}

/* Next & previous buttons */
.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
}

/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    background-color: rgba(0, 0, 0, 0.8);
}

/* Caption text */
.caption {
    top: 85%;
    left: 10%;
    border-radius: 8px;
    background-color: rgba(197, 202, 233, 0.8);
    color: black;
    font-size: 18px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    margin: auto;
    width: 80%;
    text-align: center;
}

/* Caption text scalable */
@media (max-width: 1250px) {
    .caption {
        font-size: 90%;
        top: 80%;
        left: 8%;
        position: absolute;
        text-align: center;
    }
}

@media (max-width: 540px) {
    .caption {
        font-size: 50%;
        top: 80%;
        left: 8%;
        position: absolute;
        text-align: center;
    }
}

@media (max-width: 350px) {
    .caption {
        font-size: 30%;
        top: 80%;
        left: 8%;
        position: absolute;
        text-align: center;
    }
}

/* Number text (1/3 etc) */
.numbertext {
    background-color: rgba(197, 202, 233, 0.8);
    color: black;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}

/* The dots/bullets/indicators */
.dot {
    cursor: pointer;
    height: 10px;
    width: 10px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .dot:hover {
    background-color: #303F9F;
}

/* Fading animation */
.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}

@-webkit-keyframes fade {
    from {
        opacity: .4
    }
    to {
        opacity: 1
    }
}

@keyframes fade {
    from {
        opacity: .4
    }
    to {
        opacity: 1
    }
}

/* ////////////////////////////////////////////// */

/* ////////////////////////////////////////////// */
.mainPeopleStart {
    margin: auto;
    width: inherit;

}

/* Vertical line */
hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/* Main Page button MyPeople */
.button3 {
    background-color: inherit;
    border: none;
    color: white;
    margin-left: 4%;
    margin-top: 2px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: 'Bangers', cursive;
    font-size: 30px;
    position: relative;
}

.flagThing {
    background-color: #FF5722;
    position: absolute;
    left: 0;
    height: 50px;
    width: 280px;
    -webkit-transition: width 1s;
    transition: width 1s;
}

.flagThing:after {
    content: '';
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 25px 10px 25px 0;
    border-color: transparent #ffffff transparent transparent;
    position: absolute;
    right: 0;
    top: 0;

}

.flagThing:hover {
    width: 380px;
}

/* Person of the day picture and text */

.column {
    float: left;
    padding: 10px;
    padding-left: 0;
}

.left {
    width: 18%;
}

.right {
    width: 82%;
}

.left img {
    width: 200px;
    border: 3px solid #3F51B5;
    border-radius: 50%;
    left: 0;
}

/* /////////////////////////////////////////////// */
/* footer */
.notsticky{
    position: relative;
}

/* ////////////////////////////////////////////// */

/* ////////////////////////////////////////////// */
/* thePeople page top menu (Teachers/Students) and search */

.middleMenu {
    margin: auto;
    position: inherit;
}

/* Teachers/Students buttons */
.middleMenuButtons {
    float: left;
    padding: 10pt;
    left: 0;
    position: absolute;
    display: inline;
    margin-top: -10px;
}

/* Student page */
.middleMenuButtons.on{

}

.middleMenuButtons a {
    color: white;
    text-decoration: none;
    font-family: 'Bangers', cursive;
    padding-right: 20pt;
    padding-left: 20pt;
    font-size: 17pt;
    margin-top: 10px;
    position: relative;
    top: 8px;
    left: 20px;
}

/*.middleMenuButtons a:hover {*/
/*border-bottom: 3px solid rgba(197, 202, 233, 0.8);*/
/*}*/
.flagThing.menu {
    width: 30px;
    background-color: #303F9F;
    -webkit-transition: width 1s;
    transition: width 1s;
}

.flagThing.menu.bottom {
    position: relative;
    top: 60px;
    margin-left: -13px;
}

.flagThing.menu:hover {
    width: 220px;
}

/* Search */
.middleMenuSearch {
    margin: auto;
    display: inline;
}

.middleMenuSearch input[type=text] {
    float: right;
    padding: 10px;
    font-size: 17px;
    border: 1px solid grey;
    width: 300px;
    background: #f1f1f1;
    border-radius: 8px 0 0 8px;

}

.middleMenuSearch button {
    position: inherit;
    float: right;
    width: 50px;
    padding: 10px;
    background: #FF5722;
    color: white;
    font-size: 17px;
    border: 1px solid grey;
    border-left: none; /* Prevent double borders */
    cursor: pointer;
    border-radius: 0 8px 8px 0;
}

.middleMenuSearch button:hover {
    background: #3F51B5;
}
/* ... */

